src/app/globals.css
@import "tailwindcss";

:root {
  --background: #f6f7f8;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #f6f7f8;
  }
}

body {
  background: var(--background);
  background-image: url('../../public/backgrounds/background.svg');
  background-size: 250px;
  background-position: center;
  opacity: 0.95;
  min-height: 100vh;
  height: 10vh;
  width: 100%;
  overflow: hidden !important;
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  position: relative;
}

body::after {
  content: '';
  position: absolute;
  background-color: #8181813c;
  top: 0;
  min-height: 100%;
  height: 100%;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: -100;
}

